added kernel demo