@@ -12,7 +12,7 @@
         <maven.compiler.parameters>true</maven.compiler.parameters>
 
         <oap-ws.version>18.13.0.14</oap-ws.version>
-        <oap.version>18.11.5.3</oap.version>
+        <oap.version>18.11.5.7</oap.version>
         <lombok.version>1.18.24</lombok.version>
     </properties>
 
@@ -61,7 +61,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <parameters>true</parameters>
-                    <compilerArgument>--add-modules=jdk.incubator.httpclient</compilerArgument>
+<!--                    <compilerArgument>&#45;&#45;add-modules=jdk.incubator.httpclient</compilerArgument>-->
                 </configuration>
                 <dependencies>
                     <dependency>
